--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
         "url" : "http://github.com/spion/stractory.git"
     },
     "dependencies":{
-        "threads_a_gogo":"*"
+        "threads_a_gogo":"git://github.com/SamJBarney/node-threads.git",
+        "dnode":"1.0.1",
+        "through":"1.0.0",
+        "optimist":"0.3.4"
     }    
 }
