binaries in package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "version":"0.1.0", 
     "private":false,
     "author": "spion <gorgi.kosev@gmail.com> (http://gkosev.blogspot.com)",
+    "bin": {
+        "stractory.js": './bin/stractory.js',
+        "stractory-worker.js": './bin/stractory-worker.js'
+    }
     "repository" :{ 
         "type" : "git", 
         "url" : "http://github.com/spion/stractory.git"
